# strategy-vwap-momentum

./: CHANGELOG.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: tests.yml
docs/: CALIBRATION.md
src/strategy_vwap_momentum/: __init__.py  _version.py  params.py  strategy.py  trend.py
tests/: helpers.py  test_cooldown.py  test_evaluate_pure.py  test_exit_grace.py  test_session_flatten.py  test_trend.py
